[package]
name = "mc"
version = "0.1.0"
authors = ["awheeler294 <awheeler294@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", gamepads
quicksilver = { version = "0.3.22", default-features = false, features = ["fonts", "saving"]}
noise = "0.6.0" 
enum-map = "0.6.2"
oorandom = "11.1.0"

